<resources>
    <string name="app_name">Aiden Asign3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Home</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="smith">Smith</string>
    <string name="settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sms">SMS</string>
    <string name="use_24_hour_format">Use 24-hour format</string>
    <string name="portrait_only">Portrait only</string>
    <string name="aiddown">AidDown</string>
    <string name="location">Location</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="message">Message</string>
    <string name="weather">Weather</string>
</resources>
