<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_change_hour"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="20dp"
            android:text="@string/use_24_hour_format"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:theme="@style/SCBSwitch"
            android:background="@drawable/round_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_change_screen_orientation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="148dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_button"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/portrait_only"
            android:theme="@style/SCBSwitch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_change_screen_mode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="212dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_button"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/dark_mode"
            android:theme="@style/SCBSwitch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>